--- a/courses/pcmi/2010/teran/notes/lecture3.tex
+++ b/courses/pcmi/2010/teran/notes/lecture3.tex
@@ -29,6 +29,7 @@ Once we have computed the diagonalized stress $\hat{\bfP}$, the force computatio
 \end{equation}
 where $\hat{\bfB}_m = \bfV^T \bfB_m$ can be computed and stored if the rotation is fixed for multiple force computations, as in some versions of Newmark time integration.
 
+\vspace{.5\baselineskip}
 \subsubsection{Anisotropy}
 
 If the constitutive model includes anisotropic components, it is no longer invariant under rotations of material space. However, we can continue to fully diagonalize $\bfF$, and rotate the anisotropic terms using $\bfV$. Since we still work with a diagonal $\hat{\bfF}$, the large deformation behavior of the constitutive model is still apparent and easy to modify to handle inversion. For example, if the material is stronger in a certain material direction $\bfa$, we diagonalize $\bfF$ and use $\bfV^T \bfa$ in the computation of $\hat{\bfP}$. $\hat{\bfP}$ is no longer a diagonal matrix, but we can still compute forces using equation \eqref{eq:G.diagonalized}. When constructing anisotropic constitutive models that allow inversion, we write $\hat{\bfP}$ as a diagonal matrix plus $\hat{\bfF}$ times a symmetric matrix for the anisotropic terms. Then $\hat{\bfS} = \hat{\bfF}^{-1} \hat{\bfP}$ is symmetric (preserving angular momentum) as required.
@@ -37,7 +38,7 @@ If the constitutive model includes anisotropic components, it is no longer invar
 
 \emph{[excerpted from \cite{Teran05b}, shortened and with minor modifications]}
 
-Muscle tissue has a highly complex material behavior—-it is a nonlinear, incompressible, anisotropic, hyperelastic material and we use a state-of-the-art constitutive model to describe it with a strain energy of the following form:
+Muscle tissue has a highly complex material behavior—--it is a nonlinear, incompressible, anisotropic, hyperelastic material and we use a state-of-the-art constitutive model to describe it with a strain energy of the following form:
 \begin{equation*}
 W \left( I_1, I_2, \lambda, \bfa_0, \alpha \right) = F_1 \left( I_1, I_2 \right) + U(J) + F_2 \left( \lambda, \bfa_0, \alpha \right),
 \end{equation*}
@@ -65,6 +66,11 @@ This formula holds throughout both the muscle and tendon tetrahedra, however, th
 \section{Guaranteeing Positive Definiteness of the Linear Systems in Newton Iterations}
 
 \emph{[excerpted from \cite{Teran05a}, shortened and with minor modifications]}
+
+\subsection{Finite Element Forces}
+Consider a time dependent map $\bff$ from the undeformed material coordinates $\bfX$ to world coordinates $\bfx$. The stress at a point $\bfX$ in the material depends on the deformation gradient $\bfF \left( \bfX \right) = \partial\bfx/\partial\bfX$ of this mapping. We use constant strain tetrahedral elements where $\bfF$ is a constant $3 \times 3$ matrix in each tetrahedron. We define edge vectors for each tetrahedron in both material coordinates, $\bfd_{m1} = \bfX_1 - \bfX_0$, $\bfd_{m2} = \bfX_2 - \bfX_0$, $\bfd_{m3} = \bfX_3 - \bfX_0$, and world coordinates, $\bfd_{s1} = \bfx1 - \bfx0$, $\bfd_{s2} = \bfx_2 - \bfx_0$, $\bfd_{s3} = \bfx_3 - \bfx_0$, and construct $3 \times 3$ matrices $\bfD_m$ and $\bfD_s$ using the edge vectors as columns. Then $\bfF = \bfD_s \bfD_m^{-1}$, and $\bfD_m^{-1}$ is constant and can be precomputed and stored for efficiency. 
+
+For hyperelastic materials, stress is defined as the derivative of a strain energy typically constructed from various strain invariants, and we use the first Piola-Kirchhoff stress which is the gradient of the strain energy with respect to the deformation gradient, $\bfP = \partial\Psi/\partial \bfF$. $\bfP$ maps area weighted normals in material space to forces in world space. The force on a node $i$ due to a single tetrahedron incident to it is $\bfg_i = -\bfP \left( A_1 \bfN_1 + A_2 \bfN_2 + A_3 \bfN_3 \right) / 3$, where the $A_j \bfN_j$ are the area weighted normals of the faces of the tetrahedron incident to node $i$. Since these do not change during the simulation, we can precompute a vector $\bfb_i$ such that $\bfg_i = \bfP \bfb_i$. For efficiency, we compute $\bfg_0 = -\left( \bfg_1 + \bfg_2 + \bfg_3 \right)$ and compactly express the other three $\bfg_i$ as $\bfG = \bfP \bfB_m$ where $\bfG = \left( \bfg_1, \bfg_2, \bfg_3 \right)$ and $\bfB_m = \left( \bfb_1, \bfb_2, \bfb_3 \right) = -V \bfD_m^{-T}$ with $V$ the volume of the tetrahedron in material space.
 
 \subsection{Element Stiffness Matrix}
 
@@ -127,14 +133,11 @@ Here,
 \beta_{ij} & = 4 \sigma_i \sigma_j \Psi_{\II} - \frac{2 \III \Psi_{\III}}{\sigma_i \sigma_j}, \\
 \gamma_{ij} & = \begin{pmatrix} 2 \sigma_i & 4 \sigma_i^3 & 2 \III \sigma_i^{-1} \end{pmatrix} \frac{\partial^2 \Psi}{\partial \left( I, \II, \III \right)^2} \begin{pmatrix} 2 \sigma_j \\ 4 \sigma_j^3 \\ 2 \III \sigma_j^{-1} \end{pmatrix} + \frac{4 \III \Psi_{\III}}{\sigma_i \sigma_j},
 \end{align*}
-where $\Psi = \Psi \left( I, \II, \III \right)$ is the strain energy written in terms of the invariants $I = \operatorname{tr} \left( \bfC \right)$, $\II = \bfC \colon \bfC$ and $\III = \det \bfC$ with $\bfC = \bfF^T \bfF$ and subscripts representing partial derivatives. Also, $\sigma_1$, $\sigma_2$ and $\sigma_3$ are the diagonal components that constitute $\hat{bfF}$.
+where $\Psi = \Psi \left( I, \II, \III \right)$ is the strain energy written in terms of the invariants $I = \operatorname{tr} \left( \bfC \right)$, $\II = \bfC \colon \bfC$ and $\III = \det \bfC$ with $\bfC = \bfF^T \bfF$ and subscripts representing partial derivatives. Also, $\sigma_1$, $\sigma_2$ and $\sigma_3$ are the diagonal components that constitute $\hat{\bfF}$.
 
 Positive definiteness of $\left. \left( \partial\bfP/\partial\bfF \right) \right\rvert_{\hat{\bfF}}$ is equivalent to positive definiteness of each of the blocks $\bfA$, $\bfB_{12}$, $\bfB_{13}$ and $\bfB_{23}$. For $\bfA$ a simple $3\times3$ diagonalization is required, followed by the clamping of all negative eigenvalues to zero. For the $2\times2$ matrices $\bfB_{12}$, $\bfB_{13}$ and $\bfB_{23}$ no eigenanalysis is necessary since the negative eigenvalue, if present, can be clamped to zero analytically.
 
 Our algorithm computes the stress differential $\delta\bfP$ as outlined in equation \eqref{eq:deltaP.diagonalized}. First we compute the rotated deformation differential $\bfU^T \delta\bfF \bfV$, and then convert this $3\times3$ second order tensor into a $9\times1$ vector and multiply it by the $9\times9$ matrix for $\left. \left( \partial\bfP/\partial\bfF \right) \right\rvert_{\hat{\bfF}}$ to carry out the contraction. Of course, we
 use the clamped positive definite version of $\left. \left( \partial\bfP/\partial\bfF \right) \right\rvert_{\hat{\bfF}}$. The result is then converted from a $9\times1$ vector back to a $3\times3$ second order tensor, before being premultiplied by $\bfU$ and postmultiplied by $\bfV^T$.
 
-Since we clamp eigenvalues to zero, the element stiffness matrices are only positive semi-definite, not positive definite, which raises the issue of whether the resulting global stiffness matrix could be semi-definite or ill-conditioned itself. In practice, the additive contributions of neighboring
-elements and boundary conditions always lead to a positive definite global stiffness matrix, even for extreme configurations. (Note that one could clamp to
-a small positive value as well.) The effect of boundary conditions on the definiteness of the stiffness matrix is analogous to that observed in the matrix resulting from the discretization of the Poisson equation. When all Neumann boundary conditions are specified, the resulting matrix is positive semi-definite. In this case a special version of Conjugate Gradients is still applicable, since an analytic description of the null space is available and, similarly, the global stiffness matrix of an elastic object has a null space corresponding to global translation and linearized rotation. Specification
-of one or more Dirichlet boundary conditions makes the Poisson matrix strictly positive definite, with positional constraints having the same effect on the definiteness of the global stiffness matrix for elasticity.
+Since we clamp eigenvalues to zero, the element stiffness matrices are only positive semi-definite, not positive definite, which raises the issue of whether the resulting global stiffness matrix could be semi-definite or ill-conditioned itself. In practice, the additive contributions of neighboring elements and boundary conditions always lead to a positive definite global stiffness matrix, even for extreme configurations. (Note that one could clamp to a small positive value as well.) The effect of boundary conditions on the definiteness of the stiffness matrix is analogous to that observed in the matrix resulting from the discretization of the Poisson equation. When all Neumann boundary conditions are specified, the resulting matrix is positive semi-definite. In this case a special version of Conjugate Gradients is still applicable, since an analytic description of the null space is available and, similarly, the global stiffness matrix of an elastic object has a null space corresponding to global translation and linearized rotation. Specification of one or more Dirichlet boundary conditions makes the Poisson matrix strictly positive definite, with positional constraints having the same effect on the definiteness of the global stiffness matrix for elasticity.
