--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -26,6 +26,8 @@
 
 \newcommand\bbR{\mathbb{R}}
 \newcommand\bfa{\mathbf{a}}
+\newcommand\bfb{\mathbf{b}}
+\newcommand\bfd{\mathbf{d}}
 \newcommand\bff{\mathbf{f}}
 \newcommand\bfg{\mathbf{g}}
 \newcommand\bfh{\mathbf{h}}
@@ -68,7 +70,7 @@
 \mainmatter
 
 \LectureSeries[The Mathematics of Image Processing]
-{Simulation of elasticity, biomechanics, and virtual surgery \author{J. M. Teran \and J. L. Hellrung, Jr. \and J. Hegemann}}
+{Simulation of Elasticity, Biomechanics, and Virtual Surgery \author{J. M. Teran \and J. L. Hellrung, Jr. \and J. Hegemann}}
 
 \address{UCLA Mathematics Department, Box 951555, Los Angeles, CA 90095-1555}
 \email{jteran@math.ucla.edu}
